--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
   </head>
   <body>
     <h1>SDV Calculator Experiment</h1>
+    <p>This site will contain my attempt to build an SDV crop calculator.</p>
   </body>
 </html>
