make fonts and img folders to hold files

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   <body>
     <h1>SDV Calculation Site Experiment</h1>
     <h3>This website is currently under construction</h3>
-    <img src="/neocities.png">
+    <img src="img/neocities.png">
   </body>
 </html>
