--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <h1 style="text-align: center; font-size: x-large;">SDV Calculation Site Experiment</h1>
+    <h1 style="text-align: center;">SDV Calculation Site Experiment</h1>
     <h3>This website is currently under construction</h3>
     <img src="img/neocities.png">
   </body>
