--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 style="text-align: center;">SDV Calculation Site Experiment</h1>
-    <h3>This website is currently under construction</h3>
-    <img src="img/neocities.png">
+    <h3 style="text-align: center;">This website is currently under construction</h3>
+    <img style="display: block; margin: auto; width: 50%;" src="img/neocities.png">
   </body>
 </html>
