Added Center to H1 on CSS

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <h1 style="font-family: SDVBold; text-align: center;">SDV Calculation Site Experiment</h1>
+    <h1>SDV Calculation Site Experiment</h1>
     <h3 style="text-align: center;">This website is currently under construction</h3>
     <img style="display: block; margin: auto; width: 50%;" src="img/neocities.png">
   </body>
