--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SDV Calculation Site Experiment</title>
+    <title>PlasmaticSlime's Sticky Situations</title>
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <h1>SDV Calculation Site Experiment</h1>
+    <h1>PlasmaticSlime's Sticky Situations</h1>
     <h3 style="text-align: center;">This website is currently under construction</h3>
     <img style="display: block; margin: auto; width: 50%;" src="img/neocities.png">
   </body>
