--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-    <img style="display: block; margin: auto; width: 50%;" src="img/PSlime.gif">
-    <h1>Sticky Situations</h1>
+   <h1>The Sticky Situations of</h1>
+   <img style="display: block; margin: auto; width: 50%;" src="img/PSlime.gif">
     <h3 style="text-align: center;">This website is currently under construction</h3>
     <img style="display: block; margin: auto; width: 50%;" src="img/neocities.png">
   </body>
