--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
     <link href="/style.css" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
-   <h1>The Sticky Situations of</h1>
-   <img style="display: block; margin: auto; width: 50%;" src="img/PSlime.gif">
+   <h1Plasmatic Slime's Sticky Situations</h1>
     <h3 style="text-align: center;">This website is currently under construction</h3>
     <img style="display: block; margin: auto; width: 50%;" src="img/neocities.png">
+  <img style="display: block; margin: auto; width: 50%;" src="img/PSlime.gif">
   </body>
 </html>
