--- a/under the hood/template.html
+++ b/under the hood/template.html
@@ -18,7 +18,7 @@
 
                 <main>
 
-                        <h1>Heading 1</h1>
+                        <h1>Plasmatic Slime's<br>Sticky Situations</h1>
 
                         <blockquote>
                                 <cite><a href="https://en.wikipedia.org/wiki/Kombucha">From Wikipedia, the free encyclopedia</a></cite>
@@ -26,7 +26,7 @@
                                 </p><p>Kombucha is produced by <a href="https://en.wikipedia.org/wiki/Symbiotic_fermentation">symbiotic fermentation</a> of sugared tea using a <a href="https://en.wikipedia.org/wiki/Symbiotic">symbiotic</a> culture of bacteria and yeast (<a href="https://en.wikipedia.org/wiki/SCOBY">SCOBY</a>) commonly called a "mother" or "mushroom". The <a href="https://en.wikipedia.org/wiki/Microbial">microbial</a> populations in a SCOBY vary. The yeast component generally includes <i><a href="https://en.wikipedia.org/wiki/Saccharomyces_cerevisiae">Saccharomyces cerevisiae</a></i>, along with other species; the bacterial component almost always includes <i><a href="https://en.wikipedia.org/wiki/Gluconacetobacter_xylinus">Gluconacetobacter xylinus</a></i> to <a href="https://en.wikipedia.org/wiki/Oxidize">oxidize</a> yeast-produced <a href="https://en.wikipedia.org/wiki/Alcohols">alcohols</a> to <a href="https://en.wikipedia.org/wiki/Acetic_acid">acetic acid</a> (and other acids).<sup><span>&#91;</span>2<span>&#93;</span></sup> Although the SCOBY is commonly called "tea fungus" or "mushroom", it is actually "a symbiotic growth of acetic acid bacteria and <a href="https://en.wikipedia.org/wiki/Osmophilic">osmophilic</a> yeast species in a zoogleal mat &#91;<a href="https://en.wikipedia.org/wiki/Biofilm">biofilm</a>&#93;".<sup><span>&#91;</span>3<span>&#93;</span></sup></p>
                         </blockquote>
 
-                        <p style="text-align: center;">This layout was made for <a href="https://32bit.cafe">The 32-Bit Cafe</a>'s <a href="https://32bit.cafe/spring25/">Spring 2025 Tea Party</a>.</p>
+
 
                         <h2>Heading 2</h2>
                         <h3>Heading 3</h3>
@@ -129,8 +129,7 @@
                 </nav>
 
                 <footer>
-                        <p>This is a paragraph inside of a footer.</p>
-                        <p>kombucha.css by <a href="https://ribo.zone/free/layouts/">ribo.zone</a></p>
+                        <p style="text-align: center;">This layout is an edited and tweaked version of kombucha.css, which was originally made by <a href="https://ribo.zone/free/layouts/">ribo.zone</a> for <a href="https://32bit.cafe">The 32-Bit Cafe</a>'s <a href="https://32bit.cafe/spring25/">Spring 2025 Tea Party</a>.</p>
                 </footer>
 
         </div>
