Under the Hood edits and Blog Added

--- a/under the hood/template.html
+++ b/under the hood/template.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Placeholder"> <!-- Text that displays in search results and when link is shared on social media -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta charset="utf-8">
-        <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link href="resources/style.css" rel="stylesheet" type="text/css" media="all">
 </head>
 <body>
 
