--- a/under the hood/index.html
+++ b/under the hood/index.html
@@ -20,6 +20,7 @@
 <main>
 <h1>Plasmatic Slime's<br>Sticky Situations</h1>
 
+<section>
         <blockquote>
                 <p><b>Welcome!</b>I hope you enjoy your stay.</p>
         </blockquote>
@@ -60,7 +61,9 @@
                 </li>
                 <li>Unordered list item 3</li>
         </ol>
+</section>
 
+<section>
         <figure>
                 <img src="https://picsum.photos/500/400" alt="placeholder image" style="width:75%; aspect-ratio: 5 / 4;">
                 <figcaption>This is a figure caption.</figcaption>
@@ -95,18 +98,18 @@
                                 <li>Unordered list item 1</li>
                                 <li>Unordered list item 2</li>
                         </ul>
-                        <table>
-                                <thead>
-                                        <tr> <th>This</th> <th>is</th> <th>a</th> <th>table.</th> </tr>
-                                </thead>
-                                <tbody>
-                                        <tr> <td>You</td> <td>can</td> <td>put</td> <td>columns</td> </tr>
-                                        <tr> <td>and</td> <td>rows</td> <td>in</td> <td>it.</td> </tr>
-                                </tbody>
-                        </table>
+                <table>
+                        <thead>
+                                <tr> <th>This</th> <th>is</th> <th>a</th> <th>table.</th> </tr>
+                        </thead>
+                        <tbody>
+                                <tr> <td>You</td> <td>can</td> <td>put</td> <td>columns</td> </tr>
+                                <tr> <td>and</td> <td>rows</td> <td>in</td> <td>it.</td> </tr>
+                        </tbody>
+                </table>
                         <pre><code>This is a code block! If your screen is too narrow, it will scroll.</code></pre>
-                </details>
-
+        </details>
+</section>
                 </main>
 
                 <nav id="nav">
