SDV Calc Change

--- a/under the hood (kombucha theme)/projects/SDVCalc.html
+++ b/under the hood (kombucha theme)/projects/SDVCalc.html
@@ -18,10 +18,10 @@
       <h2>Season</h2>
       <fieldset>
         <legend>What season are you choosing crops your from?</legend>
-        <label><input type="checkbox" name="season" value="Spring" id="spring"> Spring</label>
-        <label><input type="checkbox" name="season" value="Summer" id="summer"> Summer</label>
-        <label><input type="checkbox" name="season" value="Fall" id="fall"> Fall</label>
-        <label><input type="checkbox" name="season" value="Winter" id="winter"> Winter</label>
+        <label for="spring">Spring <input type="checkbox" name="season" value="spring" id="spring"/></label>
+        <label for="summer">Summer <input type="checkbox" name="season" value="summer" id="summer"/></label>
+        <label for="fall">Fall <input type="checkbox" name="season" value="sall" id="fall"/></label>
+        <label for="winter">Winter <input type="checkbox" name="season" value="sinter" id="winter"/></label>
       </fieldset>
         <br>
         <br>
