--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -22,10 +22,8 @@
                 </ul>
             </nav>
             <main id="content">
-                <h1 class="main__title">Heading 1</h1>
-                <p>This website template was my entry for <a href="https://32bit.cafe/spring25/">The 32-Bit Cafe Spring 2025 Tea Party</a>. Therefore, this template is open for public use.</p>
-                <p>I am a coffee lover, so I participated in the event, and designed and named this tempalte after my favourite coffee flavour, mocha latte.</p>
-                <p>Feel free to study the HTML and CSS of this template, use the code and customise it yourself!</p>
+                <h1 class="main__title">Plasmatic Slime's Sticky Situations</h1>
+                <p>This website</p>
                 <h2>Features</h2>
                 <p>Main features of this layout's design include:</p>
                 <ul>
