--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Mocha Latte</title>
+        <title>Plasmatic Slime's Radioactive Ramblings</title>
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link href="./style.css" rel="stylesheet">
     </head>
@@ -11,18 +11,18 @@
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="./coffee.svg" alt="">
-                <h2 class="header__title">Mocha Latte</h2>
+                <img class="header__img" src="https://assets.onecompiler.app/43n2wydzh/43n2x2rtu/plasmaticslime.svg" alt="">
+                <h2 class="header__title">Plasmatic Slime's Radioactive Ramblings</h2>
             </header>
             <nav class="navbar">
                 <ul class="navbar__links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Links</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="links.html">Links</a></li>
                 </ul>
             </nav>
             <main id="content">
-                <h1 class="main__title">Plasmatic Slime's Sticky Situations</h1>
+                <h1 class="main__title">Welcome!</h1>
                 <p>This website</p>
                 <h2>Features</h2>
                 <p>Main features of this layout's design include:</p>
@@ -33,36 +33,27 @@
                     <ul>
                         <li>Colour scheme with good colour contrasts</li>
                         <li>Friendly to keyboard navigation, with visible outlines for when interactive elements (including links, buttons and form inputs) are focused on, as well as a "skip to content" link (visible only when you press the Tab key when you are at the top of the page) and a "back to top" link (at the footer)</li>
+                        <ul>
+                          <li>Test test</li>
+                          <li>Test Test</li>
+                        </ul>
                     </ul>
                 </ul>
                 <h2>Heading 2</h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.</p>
                 <h3>Heading 3</h3>
-                <p>Facilisi Purus praesent est nec, lorem pharetra id. A elementum feugiat euismod class eget varius litora mauris.</p>
                 <h4>Heading 4</h4>
-                <p>Habitasse eu integer ultricies mauris sociis. Fusce fames adipiscing hymenaeos. Hymenaeos. Risus. Vivamus cursus lectus, curae; at vestibulum eu nam purus sociosqu bibendum nec.</p>
-                <h2>Input and Button Style Preview</h2>
-                <p><input type="text" name="test" id="input-test" value="Input" size="15"></p>
-                <p><textarea id="textarea-input" rows="3" cols="15">Textarea</textarea></p>
-                <p>
-                    <select name="menu" id="menu-id">
-                        <option selected>Selection</option>
-                        <option value="option-1">Option 1</option>
-                        <option value="option-2">Option 2</option>
-                        <option value="option-3">Option 3</option>
-                    </select>
-                </p>
-                <button>Button</button>
-                <h2>Credits</h2>
-                <ul>
-                    <li><a href="https://www.svgrepo.com/svg/530366/coffee">Coffee SVG Vector</a> by <a href="https://www.svgrepo.com/">SVG Repo</a></li>
-                    <li><a href="https://www.schemecolor.com/mocha-latte.php">Mocha Latte Color Scheme</a> by <a href="https://www.schemecolor.com/">SchemeColor.com</a>, which inspired the colours of this template, though I have modified the colours for better contrast.</li>
-                </ul>
+                <h5>Heading 5</h5>
+                
+                <h2 style="border-bottom: 0.12em solid var(--color-body-text);">Buttons</h2>
+                <h4>Pages I Like</h4>
+                  <!-- Use Flexbox to Add the Buttons -->
+                <h4>Things I'm a Fan Of</h4>
+                <!-- Use Flexbox to Add the Buttons -->
+                
             </main>
             <footer class="footer">
-                <p>Made with a love for coffee 💜☕</p>
-                <p>Mocha Latte Website Template by <a href="https://leilukin.com/">Leilukin</a> is marked with <a href="https://creativecommons.org/publicdomain/zero/1.0/">CC0 1.0 Universal</a></p>
-                <p><a href="#top">⬆️ Back to Top ⬆️</a></p>
+                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte</a> originally by <a href="https://leilukin.com/">Leilukin</a> and edited with love by Plasma ☣️🦠</p>
+                <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
         </div>
     </body>
