--- a/under the hood (cafe latte theme)/links.html
+++ b/under the hood (cafe latte theme)/links.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Plasmatic Slime's Radioactive Ramblings</title>
-        <link rel="icon" type="image/x-icon" href="plasmaticslime.svg">
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link href="./style.css" rel="stylesheet">
     </head>
     <body>
@@ -22,14 +22,16 @@
                 </ul>
             </nav>
             <main id="content">
-                <h1 class="main__title">Projects</h1>
-                  <div class="projects">
-                    <h5><a href="projects/sdvcalc.html">🥕🍅🍓 Stardew Valley Crop Calculator 🍓🍅🥕</a></h5>
-                  </div>
-                  
+              <h1 class="main__title">Links</h1>
+              <h2>Credits</h2>
+    <ul>
+      <li>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte</a> originally by <a href="https://leilukin.com/">Leilukin</a></li>
+    </ul>
+
+</main>
             <footer class="footer">
-              <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte</a> originally by <a href="https://leilukin.com/">Leilukin</a> and edited with love by Plasma ☣️🦠</p>
-              <p><a href="#top">↑ Back to Top ↑</a></p>            
+                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte</a> originally by <a href="https://leilukin.com/">Leilukin</a> and edited with love by Plasma ☣️🦠</p>
+                <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
         </div>
     </body>
