--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Plasmatic Slime's Radioactive Ramblings</title>
+        <title>Plasmatic Slime's Radioactive Rambling</title>
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link href="./style.css" rel="stylesheet">
     </head>
@@ -11,8 +11,8 @@
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="https://assets.onecompiler.app/43n2wydzh/43n2x2rtu/plasmaticslime.svg" alt="">
-                <h2 class="header__title">Plasmatic Slime's Radioactive Ramblings</h2>
+                <img class="header__img" src="plasmaticslime.svg" alt="plasmatic slime logo">
+                <h2 class="header__title">Plasmatic Slime's Radioactive Rambling</h2>
             </header>
             <nav class="navbar">
                 <ul class="navbar__links">
@@ -21,35 +21,19 @@
                     <li><a href="links.html">Links</a></li>
                 </ul>
             </nav>
-            <main id="content">
+            <main>
+                <div class="box">
                 <h1 class="main__title">Welcome!</h1>
                 <p>This website</p>
-                <h2>Features</h2>
-                <p>Main features of this layout's design include:</p>
-                <ul>
-                    <li>Light and dark mode support, by respecting user's system settings</li>
-                    <li>Mobile-friendliness</li>
-                    <li>Accessibility:</li>
-                    <ul>
-                        <li>Colour scheme with good colour contrasts</li>
-                        <li>Friendly to keyboard navigation, with visible outlines for when interactive elements (including links, buttons and form inputs) are focused on, as well as a "skip to content" link (visible only when you press the Tab key when you are at the top of the page) and a "back to top" link (at the footer)</li>
-                        <ul>
-                          <li>Test test</li>
-                          <li>Test Test</li>
-                        </ul>
-                    </ul>
-                </ul>
-                <h2>Heading 2</h2>
-                <h3>Heading 3</h3>
-                <h4>Heading 4</h4>
-                <h5>Heading 5</h5>
+                </div>
                 
-                <h2 style="border-bottom: 0.12em solid var(--color-body-text);">Buttons</h2>
-                <h4>Pages I Like</h4>
+                <div class="box">
+                    <h2>Buttons</h2>
+                    <h4>Pages I Like</h4>
                   <!-- Use Flexbox to Add the Buttons -->
-                <h4>Things I'm a Fan Of</h4>
-                <!-- Use Flexbox to Add the Buttons -->
-                
+                    <h4>Things I'm a Fan Of</h4>
+                    <!-- Use Flexbox to Add the Buttons -->
+                 </div>
             </main>
             <footer class="footer">
                 <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte</a> originally by <a href="https://leilukin.com/">Leilukin</a> and edited with love by Plasma ☣️🦠</p>
