--- a/under the hood (cafe latte theme)/links.html
+++ b/under the hood (cafe latte theme)/links.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Plasmatic Slime's Radioactive Ramblings</title>
+        <title>Plasmatic Slime's Radioactive Rambling</title>
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link href="./style.css" rel="stylesheet">
     </head>
@@ -11,8 +11,8 @@
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="https://assets.onecompiler.app/43n2wydzh/43n2x2rtu/plasmaticslime.svg" alt="">
-                <h2 class="header__title">Plasmatic Slime's Radioactive Ramblings</h2>
+                <img class="header__img" src="plasmaticslime.svg" alt="plasmatic slime logo">
+                <h2 class="header__title">Plasmatic Slime's Radioactive Rambling</h2>
             </header>
             <nav class="navbar">
                 <ul class="navbar__links">
