--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -22,21 +22,17 @@
                 </ul>
             </nav>
             <main>
-                <div class="box">
-                <h1 class="main__title">Welcome!</h1>
+                <h1 class="main__title">Welcome In</h1>
                 <p>This website</p>
-                </div>
-                
-                <div class="box">
-                    <h2>Buttons</h2>
+                <h1 class="section__header">Buttons</h1>
                     <h4>Pages I Like</h4>
-                  <!-- Use Flexbox to Add the Buttons -->
+                    <!-- Use Flexbox to Add the Buttons -->
                     <h4>Things I'm a Fan Of</h4>
                     <!-- Use Flexbox to Add the Buttons -->
-                 </div>
             </main>
             <footer class="footer">
-                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte</a> originally by <a href="https://leilukin.com/">Leilukin</a> and edited with love by Plasma ☣️🦠</p>
+                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
+                <p>Edited with love by Plasma ☣️🦠</p>
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
         </div>
