--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -25,10 +25,14 @@
                 <h1 class="main__title">Welcome In</h1>
                 <p>This website</p>
                 <h1 class="section__header">Buttons</h1>
-                    <h4>Pages I Like</h4>
-                    <!-- Use Flexbox to Add the Buttons -->
-                    <h4>Things I'm a Fan Of</h4>
-                    <!-- Use Flexbox to Add the Buttons -->
+                    <div class="inner__box">
+                      <h3>Things I Like</h3>
+                        <img href="https://plasmaticslime.neocities.org" src="/plasmaticslime.svg"/>
+                    </div>
+                    <div class="inner__box">
+                      <h3>Sites I Like</h3>
+                        <img href="https://plasmaticslime.neocities.org" src="/plasmaticslime.svg"/>
+                    </div>
             </main>
             <footer class="footer">
                 <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
