--- a/under the hood (cafe latte theme)/links.html
+++ b/under the hood (cafe latte theme)/links.html
@@ -30,7 +30,8 @@
 
 </main>
             <footer class="footer">
-                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte</a> originally by <a href="https://leilukin.com/">Leilukin</a> and edited with love by Plasma ☣️🦠</p>
+                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
+                <p>Edited with love by Plasma ☣️🦠</p>
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
         </div>
