--- a/under the hood (cafe latte theme)/links.html
+++ b/under the hood (cafe latte theme)/links.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Plasmatic Slime's Radioactive Rambling</title>
+        <meta name="description" content="Plasmatic Slime's personal website">
+        <title>Plasmatic Slime's Radioactive Rambles</title>
         <link rel="icon" type="image/x-icon" href="./favicon.ico">
         <link href="./style.css" rel="stylesheet">
     </head>
