--- a/under the hood (cafe latte theme)/projects/SDVCalc.html
+++ b/under the hood (cafe latte theme)/projects/SDVCalc.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Plasmatic Slime's Stardew Valley Crop Calculator">
     <title>Stardew Valley Crop Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
