--- a/under the hood (cafe latte theme)/links.html
+++ b/under the hood (cafe latte theme)/links.html
@@ -36,5 +36,6 @@
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
