--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -41,5 +41,6 @@
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
         </div>
+        <script src="script.js"></script>
     </body>
 </html>
