added img folder

--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -24,7 +24,7 @@
             </nav>
             <main>
                 <h1 class="main__title">Welcome In</h1>
-                <p>This website</p>
+                <p>This website is a work in progress.</p>
                 <h1 class="section__header">Buttons</h1>
                     <div class="inner__box">
                       <h3>Things I Like</h3>
