--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -27,12 +27,19 @@
                 <p>This website is a work in progress.</p>
                 <h1 class="section__header">Buttons</h1>
                     <div class="inner__box">
-                      <h3>Things I Like</h3>
-                        <img href="https://plasmaticslime.neocities.org" src="/plasmaticslime.svg"/>
-                    </div>
-                    <div class="inner__box">
                       <h3>Sites I Like</h3>
-                        <img href="https://plasmaticslime.neocities.org" src="/plasmaticslime.svg"/>
+                        <img src="/leilukin.gif" href="https://leilukin.com" alt="leilukin 88x31">
+                        <img src="/ribozone.gif" href="https://ribo.zone" alt="ribozone 88x31">
+                        <img src="/30plusclub.gif" href="https://moonpr1sm.com/random/30plusclub" alt="30plusclub 88x31">
+                    </div>
+
+                    <div class="inner__box">
+                      <h3>Things I Like</h3>
+                        <h4>Gifs and Images I Made</h4>
+                        <p>Feel free to save and use these as you so choose.</p>
+                            <img src="/SKZ1.gif" alt="Stray Kids gif">
+                            <img src="/SKZ2.gif" alt="Stray Kids gif">
+                        <h4>Gifs and Images I Got Elsewhere</h4>
                     </div>
             </main>
             <footer class="footer">
