--- a/under the hood (cafe latte theme)/index.html
+++ b/under the hood (cafe latte theme)/index.html
@@ -24,30 +24,30 @@
             </nav>
             <main>
                 <h1 class="main__title">Welcome In</h1>
-                <p>This website is a work in progress.</p>
-                <h1 class="section__header">Buttons</h1>
+                <p>This website is still very much a work in progress.</p>
+                <h1 class="section__header">Things I Like</h1>
                     <div class="inner__box">
-                      <h3>Sites I Like</h3>
+                      <h3>Sites</h3>
                         <img src="/leilukin.gif" href="https://leilukin.com" alt="leilukin 88x31">
                         <img src="/ribozone.gif" href="https://ribo.zone" alt="ribozone 88x31">
                         <img src="/30plusclub.gif" href="https://moonpr1sm.com/random/30plusclub" alt="30plusclub 88x31">
                     </div>
 
                     <div class="inner__box">
-                      <h3>Things I Like</h3>
+                      <h3>Fannish</h3>
                         <h4>Gifs and Images I Made</h4>
-                        <p>Feel free to save and use these as you so choose.</p>
+                        <p>Feel free to save and use these if you so choose. No link or credit necessary.</p>
                             <img src="/SKZ1.gif" alt="Stray Kids gif">
                             <img src="/SKZ2.gif" alt="Stray Kids gif">
                         <h4>Gifs and Images I Got Elsewhere</h4>
                     </div>
             </main>
-            <footer class="footer">
-                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
-                <p>Edited with love by Plasma ☣️🦠</p>
-                <p><a href="#top">↑ Back to Top ↑</a></p>
-            </footer>
-        </div>
-        <script src="script.js"></script>
+        <footer class="footer">
+            p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
+            <p>Edited with love by Plasma ☣️🦠</p>
+            <p><a href="#top">↑ Back to Top ↑</a></p>
+        </footer>
+    </div>
+    <script src="script.js"></script>
     </body>
 </html>
