Small Edits and Making the Site Public

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlasmaticSlime's Sticky Situations</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
-  <body>
-   <h1>Plasmatic Slime's Sticky Situations</h1>
-    <h3 style="text-align: center;">This website is currently under construction</h3>
-    <img style="display: block; margin: auto; width: 50%;" src="img/neocities.png">
-<br>
-  <img style="display: block; margin: auto; width: 50%;" src="img/PSlime.gif">
-  </body>
+<html lang="en" id="top">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Plasmatic Slime's personal website">
+        <title>Plasmatic Slime's Radioactive Rambles</title>
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link href="./style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="skip-btn"><a href="#content">Skip to content</a></div>
+        <div class="container">
+            <header class="header">
+                <img class="header__img" src="plasmaticslime.svg" alt="plasmatic slime logo">
+                <h2 class="header__title">Plasmatic Slime's Radioactive Rambling</h2>
+            </header>
+            <nav class="navbar">
+                <ul class="navbar__links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="links.html">Links</a></li>
+                </ul>
+            </nav>
+            <main>
+                <h1 class="main__title">Welcome In</h1>
+                <p>This website is still very much a work in progress.</p>
+                <h1 class="section__header">Things I Like</h1>
+                    <div class="inner__box">
+                      <h3>Sites</h3>
+                        <img src="/leilukin.gif" href="https://leilukin.com" alt="leilukin 88x31">
+                        <img src="/ribozone.gif" href="https://ribo.zone" alt="ribozone 88x31">
+                        <img src="/30plusclub.gif" href="https://moonpr1sm.com/random/30plusclub" alt="30plusclub 88x31">
+                    </div>
+
+                    <div class="inner__box">
+                      <h3>Fannish</h3>
+                        <h4>Gifs and Images I Made</h4>
+                        <p>Feel free to save and use these if you so choose. No link or credit necessary.</p>
+                            <img src="/SKZ1.gif" alt="Stray Kids gif">
+                            <img src="/SKZ2.gif" alt="Stray Kids gif">
+                        <h4>Gifs and Images I Got Elsewhere</h4>
+                    </div>
+            </main>
+        <footer class="footer">
+            p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
+            <p>Edited with love by Plasma ☣️🦠</p>
+            <p><a href="#top">↑ Back to Top ↑</a></p>
+        </footer>
+    </div>
+    <script src="script.js"></script>
+    </body>
 </html>
