--- a/public/index.html
+++ b/public/index.html
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Plasmatic Slime's personal website">
         <title>Plasmatic Slime's Radioactive Rambles</title>
-        <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
         <link href="./style.css" rel="stylesheet">
     </head>
     <body>
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="plasmaticslime.svg" alt="plasmatic slime logo">
-                <h2 class="header__title">Plasmatic Slime's Radioactive Rambling</h2>
+                <img class="header__img" src="img/plasmaticslime.svg" alt="plasmatic slime logo">
+                <h2 class="header__title">Plasmatic Slime's Radioactive Rambles</h2>
             </header>
             <nav class="navbar">
                 <ul class="navbar__links">
@@ -24,26 +24,28 @@
             </nav>
             <main>
                 <h1 class="main__title">Welcome In</h1>
-                <p>This website is still very much a work in progress.</p>
+                <p>Don't mind the mess.</p>
+                <p>This website is still a work in progress.</p>
                 <h1 class="section__header">Things I Like</h1>
+
                     <div class="inner__box">
-                      <h3>Sites</h3>
-                        <img src="/leilukin.gif" href="https://leilukin.com" alt="leilukin 88x31">
-                        <img src="/ribozone.gif" href="https://ribo.zone" alt="ribozone 88x31">
-                        <img src="/30plusclub.gif" href="https://moonpr1sm.com/random/30plusclub" alt="30plusclub 88x31">
+                      <h2>Fannish</h2>
+                        <h3>Gifs and Images I Made</h3>
+                        <p>Feel free to save and use these if you so choose. No link or credit necessary.</p>
+                            <img src="img/SKZ1.gif" alt="Stray Kids gif">
+                            <img src="img/SKZ2.gif" alt="Stray Kids gif">
+                        <h3>Gifs and Images I Got Elsewhere</h3>
                     </div>
 
                     <div class="inner__box">
-                      <h3>Fannish</h3>
-                        <h4>Gifs and Images I Made</h4>
-                        <p>Feel free to save and use these if you so choose. No link or credit necessary.</p>
-                            <img src="/SKZ1.gif" alt="Stray Kids gif">
-                            <img src="/SKZ2.gif" alt="Stray Kids gif">
-                        <h4>Gifs and Images I Got Elsewhere</h4>
+                      <h2>Sites I Like</h2>
+                        <img src="img/leilukin.gif" href="https://leilukin.com" alt="leilukin 88x31">
+                        <img src="img/ribozone.gif" href="https://ribo.zone" alt="ribozone 88x31">
+                        <img src="img/30plusclub.gif" href="https://moonpr1sm.com/random/30plusclub" alt="30plusclub 88x31">
                     </div>
             </main>
         <footer class="footer">
-            p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
+            <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
             <p>Edited with love by Plasma ☣️🦠</p>
             <p><a href="#top">↑ Back to Top ↑</a></p>
         </footer>
