--- a/public/not_found.html
+++ b/public/not_found.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not Found</title>
-    <link href="/style.css" rel="stylesheet" type="text/css" media="all">
-  </head>
+<html lang="en" id="top">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Plasmatic Slime's personal website">
+        <title>Plasmatic Slime's Radioactive Rambles</title>
+        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+        <link href="./style.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="skip-btn"><a href="#content">Skip to content</a></div>
+        <div class="container">
+            <header class="header">
+                <img class="header__img" src="img/plasmaticslime.svg" alt="plasmatic slime logo">
+                <h2 class="header__title">Plasmatic Slime's Radioactive Rambles</h2>
+            </header>
+            <nav class="navbar">
+                <ul class="navbar__links">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="links.html">Links</a></li>
+                </ul>
+            </nav>
+
+
   <body>
-    <h1>Page Not Found</h1>
-    <p>The requested page was not found.</p>
-  </body>
+    <main>
+      <h1 class="main__title">Page Not Found</h1>
+      <h3>The requested page was not found.</h3>
+    </main>
+  <footer class="footer">
+            <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
+            <p>Edited with love by Plasma ☣️🦠</p>
+            <p><a href="#top">↑ Back to Top ↑</a></p>
+        </footer>
+    </div>
+    <script src="script.js"></script>
+    </body>
+
+
+</html>
 </html>
