--- a/public/links.html
+++ b/public/links.html
@@ -13,7 +13,7 @@
         <div class="container">
             <header class="header">
                 <img class="header__img" src="plasmaticslime.svg" alt="plasmatic slime logo">
-                <h2 class="header__title">Plasmatic Slime's Radioactive Rambling</h2>
+                <h2 class="header__title">Plasmatic Slime's Radioactive Rambles</h2>
             </header>
             <nav class="navbar">
                 <ul class="navbar__links">
