--- a/public/projects/SDVCalc.html
+++ b/public/projects/SDVCalc.html
@@ -7,6 +7,7 @@
     <title>Plasmatic Slime's Stardew Valley Crop Calculator</title>
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="style.css">
+    <link href="projects/sdvcalc.js" rel="script"/>
 </head>
 <body>
   <div class="skip-btn"><a href="#content">Skip to content</a></div>
@@ -210,6 +211,5 @@
                 <p>Edited with love by Plasma ☣️🦠</p>
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
-    <script src="SDVCalc.js"></script>
 </body>
 </html>
