--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
         <meta name="description" content="Plasmatic Slime's personal website">
         <title>Plasmatic Slime's Radioactive Rambles</title>
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-        <link href="./style.css" rel="stylesheet">
+        <link href="style.css" rel="stylesheet">
+        <link href="script.js" rel="script">
     </head>
     <body>
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
@@ -50,6 +51,5 @@
             <p><a href="#top">↑ Back to Top ↑</a></p>
         </footer>
     </div>
-    <script src="script.js"></script>
     </body>
 </html>
