--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,22 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Plasmatic Slime's personal website">
         <title>Plasmatic Slime's Radioactive Rambles</title>
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-        <link href="style.css" rel="stylesheet">
-        <link href="script.js" rel="script">
+        <link rel="icon" type="image/x-icon" href="/public/img/favicon.ico">
+        <link href="/public/style.css" rel="stylesheet">
+        <link href="/public/script.js" rel="script">
     </head>
     <body>
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="img/plasmaticslime.svg" alt="plasmatic slime logo">
+                <img class="header__img" src="/public/img/plasmaticslime.svg" alt="plasmatic slime logo">
                 <h1 class="header__title">Plasmatic Slime's Radioactive Rambles</h1>
             </header>
             <nav class="navbar">
                 <ul class="navbar__links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="links.html">Links</a></li>
+                    <li><a href="/public/index.html">Home</a></li>
+                    <li><a href="/public/projects.html">Projects</a></li>
+                    <li><a href="/public/links.html">Links</a></li>
                 </ul>
             </nav>
             <main>
