--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
             </main>
         <footer class="footer">
             <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a></p> 
-            <p>Edited with love by Plasma ☣️🦠</p>
+            <p>Edited by Plasma ☣️🦠</p>
             <p><a href="#top">↑ Back to Top ↑</a></p>
         </footer>
     </div>
