--- a/public/projects.html
+++ b/public/projects.html
@@ -26,7 +26,7 @@
             <main id="content">
                 <h1 class="main__title">Projects</h1>
                   <div class="projects">
-                    <h5><a href="projects/sdvcalc.html">🥕🍅🍓 Stardew Valley Crop Calculator 🍓🍅🥕</a></h5>
+                    <h5><a href="projects/SDVCalc.html">Stardew Valley Crop Calculator</a></h5>
                   </div>
                   
             <footer class="footer">
