--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,13 @@
 
                     <div class="inner__box">
                       <h2>Fannish</h2>
-                        <h3>Gifs and Images I Made</h3>
-                        <p>Feel free to save and use these if you so choose. No link or credit necessary.</p>
+                      <p id="disclaimer">I've found these across the internet and have done my best to link to the source.</p>
+                        <img src="img/re.png" href="https://residentevils.net/codes" alt="resident evil leon kennedy 88x31">
+                    
+                      <h3>Gifs and Images I Made</h3>
+                        <p id="disclaimer">Feel free to save and use these if you so choose. No link or credit necessary.</p>
                             <img src="img/SKZ1.gif" alt="Stray Kids gif">
                             <img src="img/SKZ2.gif" alt="Stray Kids gif">
-                        <h3>Gifs and Images I Got Elsewhere</h3>
                     </div>
 
                     <div class="inner__box">
