--- a/public/projects/SDVCalc.html
+++ b/public/projects/SDVCalc.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plasmatic Slime's Stardew Valley Crop Calculator">
     <title>Plasmatic Slime's Stardew Valley Crop Calculator</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="style.css">
-    <link href="projects/sdvcalc.js" rel="script"/>
+    <link rel="script" href="script.js">
 </head>
 <body>
   <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="img/plasmaticslime.svg" alt="plasmatic slime logo">
+                <img class="header__img" src="plasmaticslime.svg" alt="plasmatic slime logo">
                 <h2 class="header__title">Plasmatic Slime's Radioactive Rambles</h2>
             </header>
             <nav class="navbar">
@@ -207,7 +207,7 @@
       <div name="result" style="margin-top: 5rem; font-weight: bold;"></div>
     </div>
             <footer class="footer">
-            <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma</p>
+                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma ☣️🦠</p>
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
 </body>
