--- a/public/projects/SDVCalc.html
+++ b/public/projects/SDVCalc.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Plasmatic Slime's Stardew Valley Crop Calculator">
     <title>Plasmatic Slime's Stardew Valley Crop Calculator</title>
     <link rel="icon" type="image/x-icon" href="./favicon.ico">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="script" href="script.js">
 </head>
 <body>
