--- a/public/projects/SDVCalc.html
+++ b/public/projects/SDVCalc.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Plasmatic Slime's Stardew Valley Crop Calculator">
     <title>Plasmatic Slime's Stardew Valley Crop Calculator</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
     <link rel="stylesheet" href="/style.css">
     <link rel="script" href="script.js">
 </head>
@@ -13,14 +13,14 @@
   <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="img/plasmaticslime.svg" alt="plasmatic slime logo">
+                <img class="header__img" src="/img/plasmaticslime.svg" alt="plasmatic slime logo">
                 <h2 class="header__title">Plasmatic Slime's Radioactive Rambles</h2>
             </header>
             <nav class="navbar">
                 <ul class="navbar__links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="links.html">Links</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/projects.html">Projects</a></li>
+                    <li><a href="/links.html">Links</a></li>
                 </ul>
             </nav>
             
