--- a/public/links.html
+++ b/public/links.html
@@ -32,7 +32,7 @@
 
 </main>
             <footer class="footer">
-            <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma</p>
+            <p>Template <a href="https://32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma</p>
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
         </div>
