--- a/public/projects/SDVCalc.html
+++ b/public/projects/SDVCalc.html
@@ -207,7 +207,7 @@
       <div name="result" style="margin-top: 5rem; font-weight: bold;"></div>
     </div>
             <footer class="footer">
-                <p>Template <a href="https:32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma ☣️🦠</p>
+                <p>Template <a href="https://32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma ☣️🦠</p>
                 <p><a href="#top">↑ Back to Top ↑</a></p>
             </footer>
 </body>
