--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                     </div>
             </main>
         <footer class="footer">
-            <p>Template <a href="https://32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma</p>
+            <p>Template <a href="https://www.32bit.cafe/spring25/mochalatte.html">Cafe Latte,</a> originally by <a href="https://leilukin.com/">Leilukin</a> and Edited by Plasma</p>
             <p><a href="#top">↑ Back to Top ↑</a></p>
         </footer>
     </div>
