--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="img/plasmaticslime.svg" alt="plasmatic slime logo">
+                <img class="header__img" src="/img/plasmaticslime.svg" alt="plasmatic slime logo">
                 <h1 class="header__title">Plasmatic Slime's Radioactive Rambles</h1>
             </header>
             <nav class="navbar">
