--- a/public/links.html
+++ b/public/links.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Plasmatic Slime's personal website">
         <title>Plasmatic Slime's Radioactive Rambles</title>
-        <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
         <link href="style.css" rel="stylesheet">
         <link href="script.js" rel="script">
     </head>
@@ -13,7 +13,7 @@
         <div class="skip-btn"><a href="#content">Skip to content</a></div>
         <div class="container">
             <header class="header">
-                <img class="header__img" src="img/plasmaticslime.svg" alt="plasmatic slime logo">
+                <img class="header__img" src="/img/plasmaticslime.svg" alt="plasmatic slime logo">
                 <h1 class="header__title">Plasmatic Slime's Radioactive Rambles</h1>
             </header>
             <nav class="navbar">
