added site 88x31 images with code block

--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,23 @@
 
                     <div class="inner__box">
                       <h2>Sites I Like</h2>
-                        <img src="img/leilukin.gif" href="https://leilukin.com" alt="leilukin 88x31">
-                        <img src="img/ribozone.gif" href="https://ribo.zone" alt="ribozone 88x31">
-                        <img src="img/30plusclub.gif" href="https://moonpr1sm.com/random/30plusclub" alt="30plusclub 88x31">
+                        <a href="https://leilukin.com"><img src="img/leilukin.gif" alt="leilukin 88x31"></a>
+                        <a href="https://ribo.zone"><img src="img/ribozone.gif" alt="ribozone 88x31"></a>
+                        <a href="https://moonpr1sm.com/random/30plusclub"><img src="img/30plusclub.gif" alt="30plusclub 88x31"></a>
+                    </div>
+
+                    <div class="inner-box">
+                        <h2>My Site</h2>
+                        <p id="disclaimer">To link to your own website, just copy and paste the code blocks below.</p>
+                    <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/kxhp4Mc.gif" alt="plasmatic slime" height="31px"></a>
+                        <code> 
+                            <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/kxhp4Mc.gif" alt="plasmatic slime" height="31px"></a>
+                        </code>
+                        <br>
+                    <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/BS9mN8r.gif" alt="plasmatic slime" height="31px"></a>
+                        <code>
+                            <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/BS9mN8r.gif" alt="plasmatic slime" height="31px"></a>
+                        </code>
                     </div>
             </main>
         <footer class="footer">
