Attempt #4 of code block

--- a/public/index.html
+++ b/public/index.html
@@ -51,14 +51,18 @@
                         <h2>My Site</h2>
                         <p id="disclaimer">To link to your own website, just copy and paste the code blocks below.</p>
                     <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/kxhp4Mc.gif" alt="plasmatic slime" height="31px"></a>
-                        <code class="language-html"><p>
-                            <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/kxhp4Mc.gif" alt="plasmatic slime" height="31px"></a>
-                        </p></code>
+                        <code class="language-html">
+                            &lt;a href="https://plasmaticslime.neocities.org"&gt;
+                            &lt;img src="https://i.imgur.com/kxhp4Mc.gif" alt="plasmatic slime" height="31px"&gt;
+                            &lt;/a&gt;
+                        </code>
                         <br>
                     <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/BS9mN8r.gif" alt="plasmatic slime" height="31px"></a>
-                        <code class="language-html"><p>
-                            <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/BS9mN8r.gif" alt="plasmatic slime" height="31px"></a>
-                        </p></code>
+                        <code class="language-html">
+                            &lt;a href="https://plasmaticslime.neocities.org"&gt;
+                            &lt;img src="https://i.imgur.com/BS9mN8r.gif" alt="plasmatic slime" height="31px"&gt;
+                            &lt;/a&gt;
+                        </code>
                     </div>
             </main>
         <footer class="footer">
