--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
                         <p id="disclaimer">To link to your own website, just copy and paste the code blocks below.</p>
                     <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/kxhp4Mc.gif" alt="plasmatic slime" height="31px"></a>
                     <br>
-                        <code class="language-html" id="disclaimer">
+                        <code class="language-html">
                             &lt;a href="https://plasmaticslime.neocities.org"&gt;
                             &lt;img src="https://i.imgur.com/kxhp4Mc.gif" alt="plasmatic slime" height="31px"&gt;
                             &lt;/a&gt;
@@ -60,7 +60,7 @@
                         <br>
                     <a href="https://plasmaticslime.neocities.org"><img src="https://i.imgur.com/BS9mN8r.gif" alt="plasmatic slime" height="31px"></a>
                     <br>    
-                        <code class="language-html" id="disclaimer">
+                        <code class="language-html">
                             &lt;a href="https://plasmaticslime.neocities.org"&gt;
                             &lt;img src="https://i.imgur.com/BS9mN8r.gif" alt="plasmatic slime" height="31px"&gt;
                             &lt;/a&gt;
